--- a/demo/package.json
+++ b/demo/package.json
@@ -1,17 +1,24 @@
 {
-  "name": "react-thumb-up",
+  "name": "my-app",
   "version": "0.1.0",
-  "description": "A simple react thumb-up animated component, with customizable props, to like with confidence",
-  "main": "dist/ThumbUp/index.js",
+  "private": true,
   "homepage": "https://madeinmoon.github.io/react-thumb-up/",
   "scripts": {
-    "build": "webpack",
-    "transpile": "babel src -d dist --copy-files",
-    "prepublishOnly": "npm run transpile",
+    "start": "node scripts/start.js",
+    "build": "node scripts/build.js",
+    "test": "node scripts/test.js",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
@@ -20,6 +27,7 @@
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
     "babel-plugin-named-asset-import": "^0.2.3",
+    "babel-preset-react-app": "^6.1.0",
     "bfj": "6.1.1",
     "case-sensitive-paths-webpack-plugin": "2.1.2",
     "chalk": "2.4.1",
@@ -66,14 +74,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.1.5",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
     "flow-bin": "^0.86.0",
-    "path": "^0.12.7",
-    "webpack-cli": "^3.1.2"
+    "gh-pages": "^2.0.1"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -118,18 +120,7 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env",
-      "@babel/preset-flow",
-      "@babel/preset-react"
-    ],
-    "plugins": [
-      "@babel/plugin-proposal-class-properties"
+      "react-app"
     ]
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  }
 }
