--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "description": "A simple react thumb-up animated component, with customizable props, to like with confidence",
   "main": "dist/ThumbUp/index.js",
   "homepage": "https://madeinmoon.github.io/react-thumb-up/",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/MadeInMoon/react-thumb-up.git"
+  },
+  "author": {
+    "name": "Max in Moon",
+    "email": "max@madeinmoon.io",
+    "url": "https://www.madeinmoon.io"
+  },
   "scripts": {
     "build": "webpack",
     "transpile": "babel src -d dist --copy-files",
@@ -13,20 +22,22 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "react": "^16.6.3"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.1.5",
     "@babel/core": "7.1.0",
-    "@svgr/webpack": "2.4.1",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
     "babel-jest": "23.6.0",
     "babel-loader": "8.0.4",
-    "babel-plugin-named-asset-import": "^0.2.3",
-    "bfj": "6.1.1",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
+    "babel-preset-es2015": "^6.24.1",
     "classnames": "^2.2.6",
     "css-loader": "1.0.0",
-    "dotenv": "6.0.0",
-    "dotenv-expand": "4.2.0",
     "eslint": "5.6.0",
     "eslint-config-react-app": "^3.0.5",
     "eslint-loader": "2.1.1",
@@ -34,45 +45,13 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.11.1",
-    "file-loader": "2.0.0",
-    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
-    "fs-extra": "7.0.0",
-    "html-webpack-plugin": "4.0.0-alpha.2",
-    "identity-obj-proxy": "3.0.0",
+    "flow-bin": "^0.86.0",
     "jest": "23.6.0",
-    "jest-pnp-resolver": "1.0.1",
-    "jest-resolve": "23.6.0",
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
-    "optimize-css-assets-webpack-plugin": "5.0.1",
-    "pnp-webpack-plugin": "1.1.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-preset-env": "6.0.6",
-    "postcss-safe-parser": "4.0.1",
-    "react": "^16.6.3",
-    "react-app-polyfill": "^0.1.3",
-    "react-dev-utils": "^6.1.1",
-    "react-dom": "^16.6.3",
-    "resolve": "1.8.1",
+    "path": "^0.12.7",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
-    "terser-webpack-plugin": "1.1.0",
-    "url-loader": "1.1.1",
-    "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.9",
-    "webpack-manifest-plugin": "2.0.4",
-    "workbox-webpack-plugin": "3.6.3"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.1.5",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.6",
-    "@babel/preset-flow": "^7.0.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "flow-bin": "^0.86.0",
-    "path": "^0.12.7",
     "webpack-cli": "^3.1.2"
   },
   "jest": {
