--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "url": "https://www.madeinmoon.io"
   },
   "scripts": {
-    "build": "webpack",
     "transpile": "babel src -d dist --copy-files",
+    "doc": "react-docgen ./src/ThumbUp/ThumbUp.js  -o ./doc/ThumbUp.json -e ./src/ThumbUp/index.js | ./doc/react-docgen/buildDocs.sh",
     "prepublishOnly": "npm run transpile"
   },
   "eslintConfig": {
@@ -50,6 +50,7 @@
     "mini-css-extract-plugin": "0.4.3",
     "node-sass": "^4.10.0",
     "path": "^0.12.7",
+    "react-docgen": "3.0.0-rc.2",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "webpack-cli": "^3.1.2"
