--- a/demo/package.json
+++ b/demo/package.json
@@ -65,6 +65,7 @@
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
+    "styled-components": "^4.1.2",
     "terser-webpack-plugin": "1.1.0",
     "tinycolor2": "^1.4.1",
     "url-loader": "1.1.1",
